--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,3 +102,76 @@ body {
     font-family: entypo;
     src: url("http://thecodeplayer.com/uploads/fonts/entypo.ttf");
 }
+
+/* Lightbox element style */
+.lb_canvas {
+    background: rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
+.lb_canvas {
+    background: white;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    top: 0;
+    left: 0; /* will be centered later in jQuery */
+    box-shadow: 0 0 20px 5px black;
+    /* Loading GIF */
+    background: white url("http://thecodeplayer.com/uploads/media/loading.gif") center center no-repeat;
+}
+
+/* A separate class for loading GIF for easy jQuery handling */
+.lb_canvas.loading {
+    background: white url("http://thecodeplayer.com/uploads/media/loading.gif") center center no-repeat;
+}
+
+/* LB Controls */
+.lb_controls {
+    width: 400px;
+    background: rgba(0, 0, 0, 0.75);
+    position: fixed;
+    bottom: 10px;
+    color: white;
+    /* to horizontally center it */
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+}
+
+.lb_controls span {
+    line-height: 30px;
+    height: 30px;
+}
+
+.lb_previous, .lb_next {
+    position: absolute;
+    top: 0;
+    padding: 5px 10px;
+    font-family: entypo;
+    font-size: 60px;
+    background: black;
+}
+
+.lb_previous {
+    left: 0;
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.lb_next {
+    right: 0;
+    border-right: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.lb_title {
+    text-align: center;
+    display: block;
+    font-size: 14px;
+    text-transform: uppercase;
+    padding: 5px 0;
+    font-weight: bold;
+}
