--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
 #lightbox {
     margin: 10px auto;
     width: 520px;
-    border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
 }
 
 #lightbox h1 {
